<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aktive</string>
    <string name="action_settings">Settings</string>
    <string name="api_host_url">http://192.168.56.1:3000</string>
    <string name="no_network_connection_toast">No network connection</string>
    <string name="app_id">778254465528667</string>
    <string name="title_activity_home">Aktive</string>
    <string name="navigation_todo">To Do</string>
    <string name="navigation_timeline">Timeline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_activity_button">New activity</string>
    <string name="suggest_me_button">Suggest me</string>
    <string name="i_decide_button">I\'ll decide</string>
    <string name="finished_item_text_view">Cool, the activity is completed and now visible on your Timeline</string>
    <string name="undo_button">Undo</string>
    <string name="title_activity_atonboarding">Onboarding</string>
    <string name="onboarding_greeting">Great, you are now part of our community! Let\'s introduce yourself a bit :)</string>
    <string name="onboarding_start_command">Yeah, let\'s go</string>
    <string name="onboarding_finish">Cool, looks like you are all set. How about we start now?</string>
    <string name="onboarding_finish_command">I like it</string>
    <string name="onboarding_question_gender">You are ...</string>
    <string name="onboarding_gender_male">male</string>
    <string name="onboarding_gender_female">female</string>
    <string name="onboarding_question_birthday">Your birthday is ...</string>
    <string name="onboarding_select_date">Select a date</string>
    <string name="onboarding_skip_text">Ok, done</string>
    <string name="set_action">Set</string>
    <string name="cancel_action">Cancel</string>
    <string name="title_activity_atadd_new_user_todo">New Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_new_todo">What would you like to do?</string>
    <string name="i_ll_do_it_by">I\'ll do it by</string>
    <string name="ok_done_action">Ok, done</string>
    <string name="activity_name_too_short_notice">Please provide a name for your activity</string>
    <string name="hint_new_todo_description">Some descriptions for this activity</string>
    <string name="title_activity_atsuggestion">ATSuggestionActivity</string>
    <string name="let_me_think_text">Hmm, let me think...</string>
    <string name="no_result_text">No suitable result is found, please retry with different values :)</string>
    <string name="title_activity_atsuggestion_result">ATSuggestionResultActivity</string>
    <string name="sound_great_text">Sounds great</string>
    <string name="absolutely_not_text">Absolutely not</string>
    <string name="another_time_text">Maybe another time</string>
    <string name="self_decide_text">No worries, I\'ll decide myself</string>
    <string name="sorry_no_result_text">Sorry, we run out of idea at the moment :(</string>
    <string-array name="suggestion_leading_text">
        <item>Ok, I think you can...</item>
        <item>How about you...</item>
        <item>A good choice for you is...</item>
        <item>Let\'s...</item>
    </string-array>
</resources>
