<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <TextView
        android:id="@+id/text_onboard_question_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_question_birthday"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="120dp"
        />


    <TextView
        android:id="@+id/text_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_select_date"
        android:layout_marginTop="220dp"
        android:textColor="@color/aktive_orange_normal"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_skip_text"
        android:layout_marginTop="290dp"
        android:textColor="@color/aktive_orange_normal"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>