<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="im.aktive.aktive.ATSuggestionResultActivity">

    <RelativeLayout
        android:id="@+id/result_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/negate_activity_horizontal_margin"
        android:layout_marginRight="@dimen/negate_activity_horizontal_margin"
        android:layout_marginTop="@dimen/negate_activity_vertical_margin"
        android:layout_marginBottom="@dimen/negate_activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/leading_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="I think you can..."
            android:gravity="center_horizontal"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/activity_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="Go to the Gym"
            android:gravity="center_horizontal"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_great_text"
            android:layout_marginTop="280dp"
            android:textSize="24sp"
            android:textColor="@color/aktive_orange_normal"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/reject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absolutely_not_text"
            android:layout_marginTop="380dp"
            android:textSize="16sp"
            android:textColor="@color/aktive_grey_normal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            />

        <TextView
            android:id="@+id/defer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another_time_text"
            android:layout_marginTop="380dp"
            android:textSize="16sp"
            android:textColor="@color/aktive_grey_normal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_result_overlay_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/negate_activity_horizontal_margin"
        android:layout_marginRight="@dimen/negate_activity_horizontal_margin"
        android:layout_marginTop="@dimen/negate_activity_vertical_margin"
        android:layout_marginBottom="@dimen/negate_activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:visibility="gone">
        <TextView
            android:id="@+id/no_result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorry_no_result_text"
            android:textSize="24sp"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/no_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_decide_text"
            android:layout_marginTop="280dp"
            android:textSize="16sp"
            android:textColor="@color/aktive_grey_normal"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_calendar"/>
    </RelativeLayout>

</RelativeLayout>
