<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/aktive_grey_lightest"
    tools:context="im.aktive.aktive.ATHomeActivity$PlaceholderFragment">

    <ListView
        android:id="@+id/list_todo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="+"
        android:textColor="@color/aktive_orange_normal"
        />

    <RelativeLayout
        android:id="@+id/add_panel"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/aktive_white"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="280dp"
        android:paddingRight="16dp">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="X"
            android:textSize="20sp"
            android:textColor="@color/aktive_orange_normal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:id="@+id/new_activity_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toRightOf="@id/cancel_button"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:gravity="left|center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/new_activity_button"/>
        <View
            android:id="@+id/separator_1"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_below="@id/new_activity_button"
            android:layout_alignLeft="@id/new_activity_button"
            android:layout_alignRight="@id/new_activity_button"
            android:background="@color/aktive_grey_normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignLeft="@id/new_activity_button"
            android:layout_below="@id/separator_1"
            >
            <TextView
                android:id="@+id/suggest_me_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="18sp"
                android:paddingLeft="16dp"
                android:gravity="left|center_vertical"
                android:text="@string/suggest_me_button"
                android:layout_weight="1"
                android:textColor="@color/aktive_orange_normal"/>
            <View
                android:id="@+id/separator_2"
                android:layout_width="0.5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/aktive_grey_normal"/>
            <TextView
                android:id="@+id/i_decide_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="18sp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/i_decide_button"
                android:layout_weight="1"
                android:textColor="@color/aktive_orange_normal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
